apps/production/wordle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordle
  namespace: wordle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordle
  template:
    metadata:
      labels:
        app: wordle
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
                  - key: node-role.kubernetes.io/master
                    operator: DoesNotExist
      containers:
        - name: wordle
          image: turtlez/neon-wordle:main_20260523112415_5ba81dff # {"$imagepolicy": "flux-system:wordle"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
