apps/production/wordle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle
  namespace: wordle
spec:
  selector:
    app: wordle
  ports:
    - name: http
      port: 3003
      targetPort: http
      protocol: TCP
