apps/production/wordle/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: wordle
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordle-http
  namespace: wordle
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wordle.turtleware.au`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: wordle
          port: 3003
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordle
  namespace: wordle
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wordle.turtleware.au`)
      kind: Rule
      services:
        - name: wordle
          port: 3003
  tls:
    secretName: wordle-tls
